Table user {
  id int [pk]
  
  email varchar [not null, unique]
  password varchar
  emailVerified boolean [not null, unique]
  name varchar [not null]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table paper {
  id int [pk]
  
  name varchar [not null]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table paperUser {
  id int [pk]
  paperId int [ref: > paper.id]
  userId int [ref: > user.id]
  
  role enum [not null]
  acceptedInvite boolean [not null]
  matriculationNumber varchar
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table scriptTemplate {
  id int [pk]
  paperId int [ref: > paper.id]
  
  sha256 string [not null]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table pageTemplate {
  id int [pk]
  scriptTemplateId int [ref: > scriptTemplate.id]
  
  imageUrl bytea [not null]
  pageNo int [not null]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table questionTemplate {
  id int [pk]
  scriptTemplateId int [ref: > scriptTemplate.id]
  parentQuestionTemplateId int [ref: > questionTemplate.id]
  
  name varchar [not null]
  score double
  pageCovered varchar
  displayPage int
  topOffset int
  leftOffset int
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table pageQuestionTemplate {
  id int [pk]
  pageTemplateId int [ref: > pageTemplate.id]
  questionTemplateId int [ref: > questionTemplate.id]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
}

Table allocation {
  id int [pk]
  
  // count int [not null]
  
  questionTemplate_id int [ref: > questionTemplate.id]
  paperUserId int [ref: > paperUser.id]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
}

Table bookmark {
  id int [pk]
  paperUserId int [ref: > paperUser.id]
  question_id int [ref: > question.id]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
}

Table question {
  id int [pk]
  questionTemplateId int [ref: > questionTemplate.id]
  scriptId int [ref: > script.id]
  
  // Flag to prevent other markers from marking at the same time
  currentMarkerId int [ref: > paperUser.id]
  currentMarkerUpdatedAt datetime
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table script {
  id int [pk]
  studentId int [ref: > paperUser.id]
  paperId int [ref: > paper.id]
  
  sha256 varchar [not null]
  hasVerifiedStudent boolean
  publishedDate datetime
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table page {
  id int [pk]
  scriptId int [ref: > script.id]
  
  imageUrl bytea [not null]
  pageNo int [not null]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table annotation {
  id int [pk]
  
  pageId int [ref: > page.id]
  paperUserId int [ref: > paperUser.id]
  layer jsonb [not null]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
}

Table comment {
  id int [pk]
  question_id int [ref: > question.id]
  paperUserId int [ref: > paperUser.id]
  
  comment string [not null]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}

Table mark {
  id int [pk]
  questionId int [ref: > question.id]
  markerId int [ref: > paperUser.id]
  
  score double [not null]
  timeSpent int [not null]
  
  createdAt datetime [not null]
  updatedAt datetime [not null]
  discardedAt datetime [not null]
}
